# curaiq

./: .apple-signing.local.example  .gitignore  BACKLOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  deployhub.json  index.html  package-lock.json  package.json
.github/workflows/: release-windows.yml  windows-check.yml
cli/: config.mjs  curaiq-guard.mjs  curaiq-hook.mjs  hook-core.mjs  moorai-aibom.mjs  moorai-guard.mjs  moorai-hook.mjs  raiseme-guard.mjs
data/: compliance.js  content-rules.js  data-tiers.js  detector-packs.js  detectors.js  detectors.json  human-approval.js  injection-i18n.js  secrets-patterns.js  threats.json
docs/: CAPABILITY_SPEC.md  DESIGN_CHECKLIST.md  DETECTION_ENGINE.md  ENTERPRISE_SUITE.md  RELEASE.md  SIGNING.md
packaging/: README.md
packaging/homebrew/: moorai.rb
scripts/: hooktest.mjs  make-icon.mjs  redteam.mjs  release.mjs  stage-frontend.mjs
server/: about.js  auth.js  compliance.js  dashboard.js  db.js  email.js  favicon.js  landing.js  og.js  policy.js  privacy.js  server.js  sso.js  terminal.js  vision.js
server/jobs/: weekly-report.mjs
src/: api.js  app.js  audit.js  buildinfo.js  engine.js  styles.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json  updater-pubkey.txt
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  platform.rs  winsec.rs
test/redteam/: corpus.json
